[gd_scene load_steps=2 format=3 uid="uid://b5rhrfigqrejf"]

[ext_resource type="Script" uid="uid://cne2tj0ifinpy" path="res://assets/scripts/EnemySpawning.gd" id="1_r5781"]

[node name="SpawnLibrary" type="Node2D"]
script = ExtResource("1_r5781")

[node name="LevelDelay" type="Timer" parent="."]
one_shot = true

[node name="WaveDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="LevelDelay" to="." method="_on_level_delay_timeout"]
[connection signal="timeout" from="WaveDelay" to="." method="_on_wave_delay_timeout"]
